--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -2,14 +2,12 @@
 <head>
   <title>Flapper News</title>
 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
-
-  <script src="app.js"></script>
-
+  <script src="/javascripts/angularApp.js"></script>
 
 </head>
 <body ng-app="flapperNews">
@@ -29,9 +27,7 @@
         ng-click="incrementUpvotes(post)"></span>
       {{post.upvotes}}
       <span style="font-size:20px; margin-left:10px;">
-        <a ng-show="post.link" href="{{post.link}}">
-          {{post.title}}
-        </a>
+        <a ng-show="post.link" href="{{post.link}}"> {{post.title}} </a>
         <span ng-hide="post.link">
           {{post.title}}
         </span>
