--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -2,12 +2,14 @@
 <head>
   <title>Flapper News</title>
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 
   <script src="/javascripts/angularApp.js"></script>
+
+  <style> .glyphicon-thumbs-up { cursor:pointer; } </style>
 
 </head>
 <body ng-app="flapperNews">
@@ -23,17 +25,14 @@
     </div>
 
     <div ng-repeat="post in posts | orderBy:'-upvotes'">
-      <span class="glyphicon glyphicon-thumbs-up"
-        ng-click="incrementUpvotes(post)"></span>
+      <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
       {{post.upvotes}}
       <span style="font-size:20px; margin-left:10px;">
-        <a ng-show="post.link" href="{{post.link}}"> {{post.title}} </a>
-        <span ng-hide="post.link">
-          {{post.title}}
-        </span>
+        <a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
+        <span ng-hide="post.link">{{post.title}}</span>
       </span>
       <span>
-        <a href="#/posts/{{$index}}">Comments</a>
+        <a href="#/posts/{{post._id}}">Comments</a>
       </span>
     </div>
 
